@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: graphics.c,v 1.302.2.13 2010/02/11 21:20:47 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: graphics.c,v 1.302.2.14 2010/03/21 04:00:05 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - graphics.c */
@@ -3977,6 +3977,7 @@ plot_f_bars(struct curve_points *plot)
  * Plot the curves in CANDLESTICSK style
  * EAM Apr 2008 - switch to using empty/fill rather than empty/striped 
  *		  to distinguish whether (open > close)
+ * EAM Dec 2009	- allow an optional 6th column to specify width
  */
 static void
 plot_c_bars(struct curve_points *plot)
@@ -4044,7 +4045,15 @@ plot_c_bars(struct curve_points *plot)
 	    /* both out of range on the same side */
 	    continue;
 
-	if (boxwidth < 0.0) {
+	if (plot->points[i].xlow != plot->points[i].x) {
+	    dxl = plot->points[i].xlow;
+	    dxr = 2 * x - dxl;
+	    cliptorange(dxr, X_AXIS.min, X_AXIS.max);
+	    cliptorange(dxl, X_AXIS.min, X_AXIS.max);
+	    xlowM = map_x(dxl);
+	    xhighM = map_x(dxr);
+
+	} else if (boxwidth < 0.0) {
 	    xlowM = xM - bar_size * tic;
 	    xhighM = xM + bar_size * tic;
 
@@ -4067,8 +4076,8 @@ plot_c_bars(struct curve_points *plot)
 	if (prev == UNDEFINED)
 	    dxl = -dxr;
 
-	dxl = plot->points[i].x + dxl;
-	dxr = plot->points[i].x + dxr;
+	dxl = x + dxl;
+	dxr = x + dxr;
 	cliptorange(dxr, X_AXIS.min, X_AXIS.max);
 	cliptorange(dxl, X_AXIS.min, X_AXIS.max);
 	xlowM = map_x(dxl);
