@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: tabulate.c,v 1.7.2.2 2009/12/25 00:23:24 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: tabulate.c,v 1.7.2.3 2010/03/21 04:00:05 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - tabulate.c */
@@ -116,8 +116,10 @@ print_table(struct curve_points *current_plot, int plot_num)
 	    fputs("1 y2", outfile);
 	    break;
 	case FINANCEBARS:
-	case CANDLESTICKS:
 	    fputs(" open ylow yhigh yclose", outfile);
+	    break;
+	case CANDLESTICKS:
+	    fputs(" open ylow yhigh yclose width", outfile);
 	    break;
 	case LABELPOINTS:
 	    fputs(" label",outfile);
@@ -191,10 +193,15 @@ print_table(struct curve_points *current_plot, int plot_num)
 			OUTPUT_NUMBER(point->yhigh, current_plot->y_axis);
 			break;
 		    case FINANCEBARS:
+			OUTPUT_NUMBER(point->ylow, current_plot->y_axis);
+			OUTPUT_NUMBER(point->yhigh, current_plot->y_axis);
+			OUTPUT_NUMBER(point->z, current_plot->y_axis);
+			break;
 		    case CANDLESTICKS:
 			OUTPUT_NUMBER(point->ylow, current_plot->y_axis);
 			OUTPUT_NUMBER(point->yhigh, current_plot->y_axis);
 			OUTPUT_NUMBER(point->z, current_plot->y_axis);
+			OUTPUT_NUMBER(2. * (point->x - point->xlow), current_plot->x_axis);
 			break;
 		    case VECTOR:
 			OUTPUT_NUMBER((point->xhigh - point->x), current_plot->x_axis);
